:sparkles: - ex017: Tabuada

--- a/aula14ex/ex017/style.css
+++ b/aula14ex/ex017/style.css
@@ -17,6 +17,14 @@ section {
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.363);
 }
 
+select {
+    margin-top: 1rem;
+}
+
+label{
+    font-size: 1.4rem;
+}
+
 footer {
     color: white;
     text-align: center;
